--- a/scss/preguntas-frecuentes.scss
+++ b/scss/preguntas-frecuentes.scss
@@ -1,5 +1,5 @@
 .faq {
-	padding: 1.5rem var(--side-space);
+	padding: 1.5rem var(--side-space) 70px var(--side-space);
 	&__title {
 		color: $principal-dark;
 		font-size: $font-size-3;
